fix: search icon was not visible on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -49,8 +49,6 @@ body *::after {
     height: 69px;
     padding: 0 10px 0 32px;
     margin-bottom: 24px;
-    background-image: url("assets/icon-search.svg");
-    background-repeat: no-repeat;
     background-size: 24px;
     background-position: 32px center;
   }
@@ -298,6 +296,10 @@ p {
   margin-bottom: 16px;
   height: 60px;
   padding: 0 7px 0 16px;
+  background-image: url("assets/icon-search.svg");
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: 16px center;
 }
 
 .search-bar > label {
@@ -323,7 +325,7 @@ p {
   font-size: 18px;
   line-height: 25px;
   color: var(--text-color);
-  padding-left: 33px;
+  padding-left: 29px;
   padding-right: 7px;
   width: 100%;
   height: 100%;
